Fixed unnecessary copying of dependencies

--- a/QuestFilterByMap/QuestFilterByMap.csproj
+++ b/QuestFilterByMap/QuestFilterByMap.csproj
@@ -9,13 +9,23 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<Reference Include="$(DuckovPath)\Duckov_Data\Managed\TeamSoda.*" />
-		<Reference Include="$(DuckovPath)\Duckov_Data\Managed\ItemStatsSystem.dll" />
-		<Reference Include="$(DuckovPath)\Duckov_Data\Managed\Unity*" />
-		<Reference Include="$(DuckovPath)\Duckov_Data\Managed\ParadoxNotion*" />
-		<Reference Include="$(DuckovPath)\Duckov_Data\Managed\NodeCanvas*" />
-		
-		<PackageReference Include="Lib.Harmony" Version="2.4.1" />
+		<Reference Include="$(DuckovPath)\Duckov_Data\Managed\TeamSoda.*">
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="$(DuckovPath)\Duckov_Data\Managed\ItemStatsSystem.dll">
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="$(DuckovPath)\Duckov_Data\Managed\Unity*">
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="$(DuckovPath)\Duckov_Data\Managed\ParadoxNotion*">
+			<Private>False</Private>
+		</Reference>
+		<Reference Include="$(DuckovPath)\Duckov_Data\Managed\NodeCanvas*">
+			<Private>False</Private>
+		</Reference>
+
+		<PackageReference Include="Lib.Harmony" Version="2.4.1"/>
 	</ItemGroup>
 
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
